Change Log

vD3.9.6 SCL 20150818
- for OpenEVSE II, bump up TEMPERATURE_AMBIENT_xxx by 10 due to extra headroom of CUI VSK-S3-12U power supply
	
vD3.9.5 SCL 20150722
- merge changes from temp branch:
	1. EVSE goes to sleep after time/charge limit met.. would stay in sleep
	-> automatically cancel sleep mode when car disconnected *only if* the
	   sleep was induced by time/charge limit
	2. decouple temperature monitoring from J1772EVSEController::Update()
	-> so that temperature is still monitored when EVSE disabled/sleeping
	3. ProcessInputs() removed from J1772EVSEController
	4. added TEMPERATURE_MONITORING_NY (not yet) code .. currently disabled
	-> $GO/$SO RAPI 
	-> added ambient/ir_thresh support
	
vD3.9.4 SCL 20150611
- reduce GFI self test pulse duration from 50% to 33%
	
vD3.9.3.1 SCL 20150611
- craigK PR #46
	
vD3.9.3 SCL 20150608
- add files and edits to restore I2CLCD_PCF8574 build capability
- broken DelayTimer() introduced in 3.9.0
	
vD3.9.2 SCL 20150606
- fix $GF bug
	
vD3.9.1 SCL 20150605
- boost I2C bus to 400KHz
	
vD3.9.0 SCL 20150604-5
- split out Gfi/J1772Pilot/J1772EvseController into separate files
- add support for changing I2C frequency
- increase I2C bus from 100KHz -> 200KHz
- use modified local Wire/twi to get rid of digitalWrite()
- on POST failure, go directly to Setup menu. Setup menu exits to reboot on POST failure
- shrink MaxCurrent/ChargeLimit/TimeLimit menu memory/code by calculating allowed
	values rather than using RAM lookup tables
- put strings in strings.cpp
- fix bugs from 3.8.4: 1) Setup menu Exit sometimes didn't work 2) Setup menu would
	start on Exit item after first use
- GFCI and No Ground faults auto reset when EV is unplugged, even if hard fault
- GFCI and No Ground faults display auto reset countdown when applicable
	GFCI FAULT
	RETRY IN 04:55
- when waiting for timer, just display Sleeping instead of Waiting
- during a fault, short press goes directly to Setup menu instead of putting
	EVSE in Sleep state